[package]
name = "preprocess"
version = "0.1.0"
authors = ["Harm Delva <harm.delva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.11.0"
rayon = "1.1.0"
radix-heap = "0.3.5"
clap =  {version = "2.33.0", features = ["unstable"]}

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
