[package]
name = "preprocess"
version = "0.1.0"
authors = ["Harm Delva <harm.delva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # parse json
indicatif = "0.11.0" # progress bars
rayon = "1.1.0" # parallellization
priority-queue = "1.0.0"
clap = "3.0.0-beta.1"  # this might backfire, but most documentation uses this version now
cached = "0.12.0" # for reading in tiles
flexbuffers = "0.1.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
